noinst_LIBRARIES = libics.a

EXTRA_DIST = wscript

libics_a_SOURCES = ics.cpp ics.h \
itetris-simulation-config.cpp itetris-simulation-config.h \
itetris-node.cpp itetris-node.h \
vehicle-node.h vehicle-node.cpp \
fixed-node.cpp fixed-node.h \
tmc-node.cpp tmc-node.h \
sync-manager.cpp sync-manager.h \
utilities.cpp utilities.h \
FacilitiesManager.cpp FacilitiesManager.h

SUBDIRS = traffic_sim_communicator wirelesscom_sim_communicator wirelesscom_sim_message_tracker applications_manager configfile_parsers facilities
