noinst_LIBRARIES = libapplicationsmanager.a

libapplicationsmanager_a_SOURCES = application-handler.cpp application-handler.h \
app-commands-subscriptions-constants.h \
app-message-manager.cpp app-message-manager.h \
app-result-container.h \
app-result-maximum-speed.cpp app-result-maximum-speed.h \
app-result-open-buslanes.cpp app-result-open-buslanes.h \
app-result-travel-time.cpp app-result-travel-time.h \
app-result-void.cpp app-result-void.h \
app-result-generic.cpp app-result-generic.h \
app-result-traffic-jam-detection.cpp app-result-traffic-jam-detection.h \
subscription.cpp subscription.h \
subscriptions-helper.cpp subscriptions-helper.h \
subscriptions-type-constants.h \
subs-return-cars-zone.cpp subs-return-cars-zone.h \
subs-set-cam-area.cpp subs-set-cam-area.h \
subs-start-travel-time-calculation.cpp subs-start-travel-time-calculation.h \
subs-stop-travel-time-calculation.cpp subs-stop-travel-time-calculation.h \
subs-calculate-travel-time.cpp subs-calculate-travel-time.h \
subs-get-received-cam-info.cpp subs-get-received-cam-info.h \
subs-get-facilities-info.cpp subs-get-facilities-info.h \
subs-app-result-traff-sim.cpp subs-app-result-traff-sim.h \
subs-app-cmd-traff-sim.cpp subs-app-cmd-traff-sim.h \
subs-app-message-send.cpp subs-app-message-send.h \
subs-app-message-receive.cpp subs-app-message-receive.h \
subs-x-application-data.cpp subs-x-application-data.h

