noinst_LIBRARIES = libconfigfileparsers.a

libconfigfileparsers_a_SOURCES = facilities-configfile-parser.h facilities-configfile-parser.cpp \
LDMrules-configfile-parser.h LDMrules-configfile-parser.cpp \
stations-configfile-parser.h stations-configfile-parser.cpp \
apps-configfile-parser.h apps-configfile-parser.cpp

SUBDIRS = sumoMapParser
